<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_background"
        android:orderInCategory="100"
        android:title="@string/background_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/shareApp"
        android:title="@string/share_app"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/rateApp"
        android:title="@string/rate_us"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:id="@+id/contact_us"
        android:title="@string/contact_us"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:id="@+id/privacy"
        android:orderInCategory="100"
        android:title="@string/privacy_policy"
        app:showAsAction="never"/>

    <item
        android:id="@+id/about_us"
        android:orderInCategory="100"
        android:title="About us"
        app:showAsAction="never"/>

    <item
        android:id="@+id/exit"
        android:orderInCategory="100"
        android:title="Exit"
        app:showAsAction="never"/>
</menu>
