<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/background2"
    android:padding="16dp"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColorLink="?android:attr/colorMultiSelectHighlight" />


    <ImageView
        android:id="@+id/img"
        android:layout_marginTop="18dp"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_gravity="center"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/privacy_policy_text"
        android:textAppearance="?android:textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/contact_us_text1"
        android:textAppearance="?android:textAppearanceMedium" />

    <TextView
        android:id="@+id/contact"
        android:layout_marginTop="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_text"
        android:textAppearance="?android:textAppearanceMedium" />
</LinearLayout>